# Oxygen

./: .env.example  .gitignore  Caddyfile  Dockerfile  Dockerfile.linux  Pipfile  README.md  app.py  config.py  pyproject.toml  requirements.txt  run.bat  update.bat  update.ps1
.github/workflows/: main.yml
controller/: api.py  redirection.py  scoreboard.py  troubleshoot.py
database/: __init__.py  info_manager.py  player_ranking_manager.py  scoreboard_manager.py  tools.py  utils.py
management_queries/: dbo.ban_player.StoredProcedure.sql  dbo.clear_unhooked_records.StoredProcedure.sql  dbo.delete_inactive_status.StoredProcedure.sql  dbo.delete_scoreboard.StoredProcedure.sql  dbo.delete_user.StoredProcedure.sql
models/: database.py  information.py  scoreboard.py  utils.py
sql_patch/: encrypt_login_fix.sql
src/: app.py  config.py
src/controller/: api.py  redirection.py  scoreboard.py  troubleshoot.py
src/database/: __init__.py  account.py  chart_ranking_manager.py  info_manager.py  player_ranking_manager.py  utils.py
src/static/: pretendard-jp.css  style.css
src/templates/: base.html  best-play.html  cash-to-gem.html  change-nickname.html  chart-ranking.html  chart.html  find-chart.html  find-music.html  find-my-id.html  find-player.html  fix-connection.html  gem-to-cash.html  index.html  music.html  online.html  player-history.html  player-ranking.html  player.html  reset-password.html  troubleshoot.html
src/tools/: encrypt.py  (+3 more)
static/: style.css
templates/: base.html  chart-ranking.html  error.html  find-music.html  fix-connection.html  index.html  music.html  online.html  player-history.html  player-ranking.html  player.html  ranking.html  troubleshoot.html  web.config
tests/: login.http
tools/: encrypt.py  search_parser.py
