[tool.poetry]
name = "oxygen"
version = "0.0.1"
description = "O2Jam internet ranking service"
authors = ["Chu Minseok <mchu7797@gmail.com>"]
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
Flask = "^3.0.2"
Flask-Cors = "^4.0.1"
pyodbc = "^5.1.0"
waitress = "^3.0.0"
requests = "^2.31.0"
python-dateutil = "^2.9.0.post0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
