[project]
name = "Oxygen"
version = "0.1.0"
description = "O2Jam internet ranking service"
requires-python = ">=3.13"
dependencies = [
    "flask>=3.1.0",
    "flask-cors>=5.0.0",
    "pyodbc>=5.2.0",
    "python-dateutil>=2.9.0.post0",
    "python-dotenv>=1.1.1",
    "requests>=2.32.3",
    "waitress>=3.0.2",
]
